tests/ui/traits/trait-upcasting/multiple-occurrence-ambiguousity.stderr
error[E0308]: mismatched types
  --> $DIR/multiple-occurrence-ambiguousity.rs:19:26
   |
LL |     let t: &dyn Bar<_> = s;
   |            -----------   ^ expected trait `Bar`, found trait `Foo`
   |            |
   |            expected due to this
   |
   = note: expected reference `&dyn Bar<_>`
              found reference `&dyn Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
